--- a/style.css
+++ b/style.css
@@ -1,7 +1,59 @@
 html {
     box-sizing: border-box;
+    margin: 0;
 }
 
 *, *:before, *:after {
     box-sizing: inherit;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.background {
+    background-image: url(./assets/background.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-attachment: fixed;
+}
+
+header {
+    background-color: mintcream;
+    padding: 0.6rem;
+    margin: 1rem 0;
+    border-radius: 8px;
+    box-shadow: grey 0px 2px 5px;
+    opacity: 0.9;
+}
+
+h1 {
+    margin: 0;
+    font-family: Helvetica, Arial, sans-serif;
+    text-transform: uppercase;
+}
+
+table {
+    width: 90vw;
+    background-color: mintcream;
+    border-radius: 8px;
+    box-shadow: grey 0px 2px 5px;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+    text-align: left;
+}
+
+th {
+    padding-bottom: 0.5rem;
+}
+
+tr {
+    padding-bottom: 0.9rem;
+}
+
+footer {
+    margin: 1rem 0;
 }
