--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ html {
 }
 
 body {
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 17px;
+    line-height: 1.6;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -32,7 +35,6 @@ header {
 
 h1 {
     margin: 0;
-    font-family: Helvetica, Arial, sans-serif;
     text-transform: uppercase;
 }
 
@@ -52,6 +54,43 @@ th {
 
 tr {
     padding-bottom: 0.9rem;
+}
+
+tr:hover {
+    box-shadow: paleturquoise 0 0 5px;
+    border-radius: 3px;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: mintcream;
+    margin: 20% auto;
+    padding: 20px;
+    width: 70%;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
+}
+
+.closeBtn {
+    color: rgb(167, 167, 167);
+    float: right;
+    font-size: 30px;
+}
+
+.closeBtn:hover, .closeBtn:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 footer {
