--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ body {
 
 header {
     background-color: mintcream;
-    padding: 0.6rem;
-    margin: 1rem 0;
+    padding: 0.2rem 1rem;
+    margin: 0.2rem 0;
     border-radius: 8px;
     box-shadow: grey 0px 2px 5px;
     opacity: 0.9;
@@ -36,6 +36,16 @@ header {
 h1 {
     margin: 0;
     text-transform: uppercase;
+}
+
+nav {
+    padding: 8px;
+    width: 400px;
+}
+
+nav input {
+    padding: 8px;
+    width: 100%;
 }
 
 table {
@@ -112,4 +122,20 @@ footer {
 #myChart {
     height: 40%;
     width: 100%;
+}
+
+@media screen and (max-width: 640px) {
+    nav, table {
+        width: 100vw;
+        border-radius: 0px;
+    }
+    tr {
+        font-size: 14px;
+        line-height: 1.8;
+    }
+    .modal-content {
+        margin: 2% auto;
+        padding: 5px;
+        width: 98%;
+    }
 }
