--- a/style.css
+++ b/style.css
@@ -63,7 +63,15 @@ th {
 }
 
 tr {
-    padding-bottom: 0.9rem;
+    padding-bottom: 1.1rem;
+}
+
+.paginated {
+    font-size: large;
+}
+
+.hidden {
+    display: none;
 }
 
 tr:hover {
@@ -116,7 +124,29 @@ tr:hover {
 }
 
 footer {
-    margin: 1rem 0;
+    margin: 0.5rem 0;
+}
+
+.paginationBtn {
+    font-size: 1.2rem;
+    width: 3rem;
+    height: 3rem;
+    padding: 5px;
+    margin: 0 1px;
+    cursor: pointer;
+}
+
+.paginationBtn:focus {
+    outline: none;
+}
+
+.paginationBtn.active {
+    background-color: rgb(168, 168, 168);
+    color: white;
+}
+
+.paginationBtn:hover:not(.active) {
+    background-color: #ddd;
 }
 
 #myChart {
@@ -125,6 +155,18 @@ footer {
 }
 
 @media screen and (max-width: 640px) {
+    header {
+        width: 100vw;
+        font-size: 0.8rem;
+        text-align: center;
+        position: static;
+        border-radius: 0;
+        margin-top: 0;
+    }
+    h1 {
+        padding: 0px;
+        margin: 0;
+    }
     nav, table {
         width: 100vw;
         border-radius: 0px;
@@ -132,6 +174,11 @@ footer {
     tr {
         font-size: 14px;
         line-height: 1.8;
+    }
+    #pagination {
+        width: 100vw;
+        display: flex;
+        justify-content: space-around;
     }
     .modal-content {
         margin: 2% auto;
