--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0px;
 }
 
 .background {
@@ -50,6 +51,7 @@ nav input {
 
 table {
     width: 90vw;
+    min-width: 400px;
     background-color: mintcream;
     border-radius: 8px;
     box-shadow: grey 0px 2px 5px;
@@ -64,10 +66,6 @@ th {
 
 tr {
     padding-bottom: 1.1rem;
-}
-
-.paginated {
-    font-size: large;
 }
 
 .hidden {
@@ -154,7 +152,16 @@ footer {
     width: 100%;
 }
 
+@media screen and (max-width: 720) {
+    .paginated {
+        border: 1px solid red;
+    }
+}
+
 @media screen and (max-width: 640px) {
+    body {
+        text-size-adjust: auto;
+    }
     header {
         width: 100vw;
         font-size: 0.8rem;
@@ -172,8 +179,12 @@ footer {
         border-radius: 0px;
     }
     tr {
-        font-size: 14px;
         line-height: 1.8;
+        box-shadow: paleturquoise 0 1px 0px;
+    }
+    td {
+        vertical-align: top;
+        /* white-space: nowrap; */
     }
     #pagination {
         width: 100vw;
